# VideoProcessing

./: CMakeLists.txt  README.md
include/: bmp.h  imageconverter.h  overlayprocessor.h  videoimageblender.h  yuv420.h  yuv420data.h  yuv420frame.h
src/: bmp.cpp  imageconverter.cpp  main.cpp  overlayprocessor.cpp  videoimageblender.cpp  yuv420.cpp
